--- a/email-template-viewer/src/app/page.module.css
+++ b/email-template-viewer/src/app/page.module.css
@@ -16,7 +16,8 @@
 
 .main {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  margin: auto 50px;
   gap: 32px;
   min-height: 100vh;
   grid-row-start: 2;
